<resources>
    <string name="app_name">WMS Anbar</string>
    <string name="picking">Yığım</string>
    <string name="packing">Yoxlama / Paketləmə</string>
    <string name="transport">Daşıma / Çatdırılma</string>
    <string name="user_id">İstifadəçi kodu</string>
    <string name="password">Şifrə</string>
    <string name="refresh">Yenilə</string>
    <string name="user_label">İstifadəçi:</string>
    <string name="trx_no_label">No</string>
    <string name="item_count">Sətir</string>
    <string name="pick_area">Zona</string>
    <string name="description">Açıqlama</string>
    <string name="picked">Yığılıb</string>
    <string name="inv_code">Mal kodu</string>
    <string name="inv_name">Mal adı</string>
    <string name="qty">Say</string>
    <string name="for_picking">Yığılmalıdır</string>
    <string name="cancel">Ləğv et</string>
    <string name="equate">Eyniləşdir</string>
    <string name="quantity_not_correct">Say düzgün deyil</string>
    <string name="ok">OK</string>
    <string name="barcode_search">Barkodla axtar</string>
    <string name="search">Axtar</string>
    <string name="equate_all">Hamısını eyniləşdir</string>
    <string name="customer_label">Müştəri</string>
    <string name="packed">Paketlənib</string>
    <string name="packed_short">Paket.</string>
    <string name="add">Yeni</string>
    <string name="driver_label">Sürücü:</string>
    <string name="vehicle_label">N/V nömrəsi:</string>
    <string name="count_label">Sənəd sayı:</string>
    <string name="driver">Sürücü</string>
    <string name="vehicle">N/V nömrəsi</string>
    <string name="scan">Skan</string>
    <string name="uom">Ö.V.</string>
    <string name="send">Göndər</string>
    <string name="error">Xəta</string>
    <string name="driver_code_incorrect">Sürücü kodu düzgün deyil</string>
    <string name="vehicle_code_incorrect">Nəqliyyat vasitəsi kodu düzgün deyil</string>
    <string name="doc_already_loaded">Bu sənəd yüklənib.</string>
    <string name="good_not_found">Mal tapılmadı.</string>
    <string name="not_allowed">Səlahiyyətiniz yoxdur.</string>
    <string name="username_or_password_not_entered">İstifadəçi kodu və ya şifrə daxil edilməyib.</string>
    <string name="enter">Daxil ol</string>
    <string name="warning">Xəbərdarlıq</string>
    <string name="info">Info</string>
    <string name="no_data">Yeni sənəd yoxdur</string>
    <string name="parameters">Parametrlər</string>
    <string name="service_url">Servis linki</string>
    <string name="connection_timeout">Qoşulma vaxtı limiti (saniyə)</string>
    <string name="delete">Sil</string>
    <string name="want_to_delete">Silmək istəyirsinizmi?</string>
    <string name="shipping">Yükləmə</string>
    <string name="ship_doc">Yükləmə sənədi</string>
    <string name="brand">Brend</string>
    <string name="reload_all">Hamısını sıfırla</string>
    <string name="serial_scan">Seriyalı</string>
    <string name="increase">Əlavə et</string>
    <string name="already_picked">Bu mal artıq yığılıb</string>
    <string name="already_packed">Bu mal artıq yoxlanıb</string>
    <string name="exceeded_ordered_qty">Sifariş edilmiş saydan artıq yığıla bilməz</string>
    <string name="inv_attributes">Mal atributları</string>
    <string name="image">Şəkil</string>
    <string name="sbe_name">Təmsilçi</string>
    <string name="pick_report">Yığım hesabatı</string>
    <string name="from_date">Tarixdən</string>
    <string name="to_date">Tarixə</string>
    <string name="ready">Hazır</string>
    <string name="keyword">Açar söz</string>
    <string name="keyword_not_entered">Açar söz daxil edilməyib.</string>
    <string name="update">Versiyanı yenilə</string>
    <string name="no_new_version">Yeni versiya yoxdur!</string>
    <string name="camera_scanner">Kamera skaner</string>
    <string name="image_url">Şəkil linki</string>
    <string name="waiting_docs">Gözləyən sənədlər</string>
    <string name="status">Status</string>
    <string name="edit_attributes">Attributlara düzəliş</string>
    <string name="save">Yadda saxla</string>
    <string name="attribute_value">Atribut dəyəri</string>
    <string name="not_defined">&lt;Təyin edilməyib&gt;</string>
    <string name="error_occurred">Xəta baş verdi!</string>
    <string name="from_server">Serverdən</string>
    <string name="src_whs">Çıxış anbarı</string>
    <string name="amount">Məbləğ</string>
    <string name="select">Seç</string>
    <string name="print">Print</string>
    <string name="from_customer">Müştəridən</string>
    <string name="from_whs">Digər anbardan</string>
    <string name="three_dot">…</string>
    <string name="whs">Anbar</string>
    <string name="date">Tarix</string>
    <string name="product_approve">Mal qəbulu (İstehsalat)</string>
    <string name="internal_count">İç sayı</string>
    <string name="inv_list">Mallar</string>
    <string name="barcode">Barkod</string>
    <string name="uom_factor">Ölçü vahidi faktoru</string>
    <string name="edit_barcodes">Barkodlara düzəliş</string>
    <string name="barcode_already_assigned">Bu barkod artıq başqa malda tanıdılıb!</string>
    <string name="reset">Geri göndər</string>
    <string name="whs_location">Anbar yerləşməsi</string>
    <string name="location_barcode">Ünvan barkodu</string>
    <string name="internal_use">Daxili istifadə</string>
    <string name="check_mode">Yoxlama rejimi</string>
    <string name="not_shipped_for_current_driver">Bu sənəd cari sürücü üçün yükləməyə verilməyib!</string>
    <string name="confirm_delivery">Çatdırılmanın təsdiqi</string>
    <string name="to_central_whs">Mərkəzə</string>
    <string name="update_version">Proqram versiyasını yenilə</string>
    <string name="want_to_update">Yeniləmək istəyirsinizmi?</string>
    <string name="yes">Bəli</string>
    <string name="no">Xeyr</string>
    <string name="actual">Aktual</string>
    <string name="apply_to_central">Mərkəzə qəbul</string>
    <string name="purchase_orders">Alış sifarişləri</string>
    <string name="seller">Satıcı</string>
    <string name="sbe">Təmsilçi</string>
    <string name="trx_no">Sənəd No</string>
    <string name="trx_date">Sənəd tarixi</string>
    <string name="counted">Sayılıb</string>
    <string name="device_info">Cihaz ID-si</string>
    <string name="latest_movements">Son hərəkət tarixçəsi</string>
    <string name="clear_logs">Loqları təmizlə</string>
    <string name="share">Paylaş</string>
    <string name="logs">Loqlar</string>
    <string name="change_brand">Brendi dəyiş</string>
    <string name="attributes">Atributlar</string>
    <string name="barcodes">Barkodlar</string>
    <string name="edit">Redaktə et</string>
    <string name="inventory_info">İnventar məlumatları</string>
    <string name="brand_not_selected">Brend seçilməyib</string>
    <string name="assistant">Köməkçi</string>
    <string name="assistant_code_incorrect">Köməkçi personal kodu düzgün deyil</string>
</resources>
