<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    tools:context=".activity.ApproveTrxActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/customer_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/from_customer" />

            <RadioButton
                android:id="@+id/src_whs_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/from_whs" />
        </RadioGroup>

        <ImageButton
            android:id="@+id/print"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/print"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/printer" />

        <ImageButton
            android:id="@+id/send"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/send"
            app:layout_constraintEnd_toStartOf="@+id/print"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_upload" />

        <ImageButton
            android:id="@+id/inv_list"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/save"
            app:layout_constraintEnd_toStartOf="@+id/send"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_sort_by_size" />

        <ImageButton
            android:id="@+id/scan_cam"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/camera_scanner"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/inv_list"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_camera" />

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radioGroup">

            <TextView
                android:id="@+id/src_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="3dp"
                android:layout_weight="1"
                android:hint="@string/not_defined"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/select_src"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:contentDescription="@string/select"
                android:text="@string/three_dot" />

        </LinearLayout>

        <Spinner
            android:id="@+id/trg_whs_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <HorizontalScrollView
        android:id="@+id/trx_list_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/user_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_panel"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableRow
                android:id="@+id/header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#D9FBFA"
                android:padding="3dp">

                <View
                    android:layout_width="3dp"
                    android:layout_height="match_parent"
                    android:background="?android:attr/listDivider"
                    android:foreground="@android:color/black" />

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:text="@string/inv_code" />

                <View
                    android:layout_width="3dp"
                    android:layout_height="match_parent"
                    android:background="?android:attr/listDivider"
                    android:foreground="@android:color/black" />

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:text="@string/inv_name" />

                <View
                    android:layout_width="3dp"
                    android:layout_height="match_parent"
                    android:background="?android:attr/listDivider"
                    android:foreground="@android:color/black" />

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"
                    android:gravity="end"
                    android:text="@string/qty" />

                <View
                    android:layout_width="3dp"
                    android:layout_height="match_parent"
                    android:background="?android:attr/listDivider"
                    android:foreground="@android:color/black" />

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"
                    android:text="@string/brand" />

                <View
                    android:layout_width="3dp"
                    android:layout_height="match_parent"
                    android:background="?android:attr/listDivider"
                    android:foreground="@android:color/black" />
            </TableRow>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/trx_list_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="180dp" />
        </LinearLayout>
    </HorizontalScrollView>

    <include
        layout="@layout/footer_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/trx_list_scroll" />
</androidx.constraintlayout.widget.ConstraintLayout>