<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/cart"
                android:gravity="start|center_vertical"
                android:onClick="openPickingDocs"
                android:text="@string/picking"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/pack"
                android:gravity="start|center_vertical"
                android:onClick="openPackingDocs"
                android:text="@string/packing"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/transport"
                android:gravity="start|center_vertical"
                android:onClick="openShippingDocs"
                android:text="@string/shipping"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/list"
                android:gravity="start|center_vertical"
                android:onClick="openInvApproving"
                android:text="@string/internal_use"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/list"
                android:gravity="start|center_vertical"
                android:onClick="openProductApproving"
                android:text="@string/product_approve"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/delivery"
                android:gravity="start|center_vertical"
                android:onClick="openConfirmDelivery"
                android:text="@string/confirm_delivery"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/list"
                android:gravity="start|center_vertical"
                android:onClick="openPurchaseOrders"
                android:text="@string/purchase_orders"
                android:textAllCaps="false"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>