<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.InventoryInfoActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/keyword_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="@string/keyword"
                android:ems="10"
                android:hint="@string/keyword"
                android:inputType="textFilter" />

            <Spinner
                android:id="@+id/search_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search" />

        </LinearLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/good_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:gravity="start|top"
                android:paddingBottom="200dp"
                android:textColor="@android:color/black"
                android:textSize="24sp" />
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@android:color/white"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/scan_cam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/camera_scanner"
            android:textAllCaps="false"
            android:visibility="invisible"
            app:layout_constraintVertical_bias="1.0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/edit_attributes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_attributes"
                android:textAllCaps="false"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/edit_shelf_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/shelf_location"
                android:textAllCaps="false"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <Button
            android:id="@+id/latest_movements"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/latest_movements"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/edit_barcodes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_barcodes"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/image"
            android:textAllCaps="false" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>